# text2term

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: github_test.yml  upload_pypi.yml  upload_testpypi.yml
test/: simple_preprocess.txt  test_blocklist.txt  test_ontology.owl  test_t2t.py  test_templates.txt
text2term/: __main__.py  bioportal_mapper.py  onto_utils.py  preprocess.py  t2t.py  term_collector.py  tfidf_mapper.py  zooma_mapper.py
