[project]
name = "text2term"
version = "4.5.0"
description = "A tool for mapping free-text descriptions of entities to ontology terms"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["ontology", "text mining", "mapping", "biomedical"]

authors = [
    { name="Rafael Goncalves", email="goncalves@stanford.edu" },
    { name="Jason Payne", email="paynejason@gmail.com" }
]
maintainers = [
    { name="Rafael Goncalves", email="goncalves@stanford.edu" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    "owlready2~=0.47",
    "argparse~=1.4.0",
    "pandas~=2.2.3",
    "numpy~=1.26.4",
    "gensim~=4.3.2",
    "scipy~=1.12.0",
    "scikit-learn~=1.6.1",
    "setuptools~=80.8.0",
    "requests~=2.32.3",
    "tqdm~=4.67.1",
    "sparse-dot-topn~=1.1.3",
    "bioregistry~=0.11.10",
    "nltk~=3.9.1",
    "rapidfuzz~=3.12.2",
    "shortuuid~=1.0.11",
    "myst-parser~=4.0.1",
]

[project.optional-dependencies]
dev = ["pytest==8.1.1"]
docs = ["sphinx"]

[tool.setuptools]
packages = ["text2term"]
include-package-data = true

[build-system]
requires = ["setuptools>=80.8", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/rsgoncalves/text2term"
Repository = "https://github.com/rsgoncalves/text2term.git"
Issues = "https://github.com/rsgoncalves/text2term/issues"
